!!!!!!!!!!!!!!!NOTE - NOTE!!!!!!!!!!!!!!!!!!!!!
Remember to increase the TIGHTDB_JNI_VERSION in com_tightdb_internal_Util.cpp and com.tightdb.internal.Util.java
      when the JNI interface is changed.
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

07-November-2013:
================
+ Avoiding more namespace issues when defining typed tables.
+ Added com.tightdb.IllegalMixedTypeException as a runtime exception. Is thrown when getting a wrong type from a Mixed object.

06-November-2013:
================
+ Added getSourceRowIndex() method on TableView.

25-October-2013:
================
+ Added lookup(String val) method to typed table.

25-October-2013:
================
+ Added addEmptyRow() method to typed table.
+ Added findFrom() method to typed query.

15-October-2013:
================
+ Trying to get a value from column with column index no longer breaks core, but throws exception instead.

13-October-2013:
================
+ dist-deb target in build.sh, updating debian/changelog.in.

09-October-2013:
===============
+ Added support for Async durability in SharedGroup.
+ Added ShareGroup.reserve(bytes)

08-October-2013:
================
+ Added where() on TableOrView interface.
+ Added where() in TableView.
+ Added queries on views in the typed interface.

30-September-2013:
==================
+ TableSchema interface added, declaring methods for adding, removing and renaming columns on tables and getting a SubTableSchema.
+ Table implements methods from TableSchema interface.
+ SubTableSchema class added, implementing methods from TableSchema interface, allowing dynamic schema changes on subtables.

27-September-2013:
==================
! BREAKING CHANGE: Removed named column cursors from rows in typed interface. Now only traditional getters/setters are allowed.
! BREAKING CHANGE: Because of the above subtables in Mixed columns are not supported, until a better implementation is made.